connect spring boot to redis container, add cache for user info.
