# Backend/src/main/resources/static/openapi.yaml
@@ -224,7 +224,7 @@ paths:
             content:
               application/json:
                 schema:
-                  $ref: '#/components/schemas/CreateChannelResponseDto'
+                  $ref: '#/components/schemas/ChannelDto'
         403:
           description: "Forbidden – not the owner or insufficient permissions"
         404:
@@ -702,7 +702,7 @@ components:
             - TEXT
             - VOICE
 
-    CreateChannelResponseDto:
+    ChannelDto:
       type: object
       properties:
         id:
